-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
-
0367aace1 (dev), 82a32ac7a (6.7), c2bcf9c2f (6.6)
When trying to use a Pen/Stylus on a touchscreen, the input does not work as expected and does not generate a button click
This seems to be the current pointerhandler example app, as the old touchinteraction example works as expected.
- is duplicated by
-
QTBUG-120327 Pen PointerEvents not handled in WebAssembly (fix attached)
-
- Closed
-