src/plugins/platforms/wasm/qwasmevent.h
@@ -39,6 +39,7 @@ enum class EventType {
 enum class PointerType {
     Mouse,
     Touch,
+    Pen,
     Other,
 };
 
